buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.5.RELEASE"
        classpath "com.moowork.gradle:gradle-node-plugin:1.3.1"
    }
}


apply plugin: "java"
apply plugin: "eclipse"
apply plugin: "org.springframework.boot"
apply plugin: "com.moowork.node"

group = "com.myssteriion"
version = "1.0"
sourceCompatibility = "1.8"


repositories {
	mavenCentral()
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter:2.1.5.RELEASE"
	implementation "org.springframework.boot:spring-boot-starter-web:2.1.5.RELEASE"
	implementation "com.h2database:h2:1.4.199"
	implementation "com.googlecode.junit-toolbox:junit-toolbox:2.4"
	implementation "ch.qos.logback:logback-core:1.2.3"
	
	testImplementation "org.springframework.boot:spring-boot-starter-test:2.1.5.RELEASE"
}


def deliveryFolder = "delivery"


node {
	version = "10.16.0"
	npmVersion = "6.9.0"
	download = true
	
	nodeModulesDir = file("front")
}

assemble.dependsOn npm_run_build


clean {
	delete deliveryFolder
	delete "front/dist"
}

build {
	doLast {
		copy {
		    from "conf"
	    	include "**/*"
		    into deliveryFolder
		}
		copy {
		    from ".gradle/nodejs"
		    include "**/*"
		    into deliveryFolder + "/libs/nodejs"
		}
		copy {
		    from "build/libs"
		    include "*"
		    into deliveryFolder + "/libs"
		}
		copy {
		    from "front/dist"
		    include "**/*"
		    into deliveryFolder + "/libs"
		}
		
		delete "logs"		
		mkdir deliveryFolder + "/musiques/annees_60"
		mkdir deliveryFolder + "/musiques/annees_70"
		mkdir deliveryFolder + "/musiques/annees_80"
		mkdir deliveryFolder + "/musiques/annees_90"
		mkdir deliveryFolder + "/musiques/annees_2000"
		mkdir deliveryFolder + "/musiques/cinemas"
		mkdir deliveryFolder + "/musiques/series"
		mkdir deliveryFolder + "/musiques/disney"
		mkdir deliveryFolder + "/musiques/francais"
	}
}

test {
    exclude "**/TestSuite.class"
}
